--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>EcoRush: Barangay Cleanup Challenge</title>
-  <script src="https://cdn.tailwindcss.com/3.4.17"></script>
+  <title></title>
   <script src="/_sdk/element_sdk.js"></script>
 
   <style>
