--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@
     <!-- HOME SCREEN -->
     <div id="home-screen" class="screen active bg-home flex-col items-center justify-center p-6 text-center">
       <div class="mb-8">
-        <div class="text-7xl mb-4 float">🌿</div>
+        <div class="text-7xl mb-4 float"></div>
         <div class="title-bg mb-2">
-          <h1 id="game-title" class="text-5xl font-bold text-white drop-shadow-xl">EcoRush</h1>
+          <h1 id="game-title" class="text-5xl font-bold text-white drop-shadow-xl"></h1>
         </div>
-        <p class="text-emerald-100 text-xl drop-shadow">Barangay Cleanup Challenge</p>
+        <p class="text-emerald-100 text-xl drop-shadow"></p>
       </div>
 
       <div class="space-y-4 w-full max-w-xs mb-8">
