--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     }
     .screen > *{ position:relative; z-index:1; }
 
-    /* title background */
+    /* title background (kept, not required now) */
     .title-bg{
       background: url("background-ui/title.png") center/cover no-repeat;
       padding: 20px 30px;
@@ -192,6 +192,101 @@
     ::-webkit-scrollbar-track { background: rgba(0,0,0,0.1); border-radius: 4px; }
     ::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.3); border-radius: 4px; }
     ::-webkit-scrollbar-thumb:hover { background: rgba(255,255,255,0.5); }
+
+    /* =========================
+       ✅ HOME (TITLE IMAGE + BETTER BUTTONS)
+       ========================= */
+    @keyframes homeFloat {
+      0%,100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
+    @keyframes sheen {
+      0% { transform: translateX(-120%) skewX(-20deg); opacity: 0; }
+      25% { opacity: .35; }
+      60% { opacity: .15; }
+      100% { transform: translateX(220%) skewX(-20deg); opacity: 0; }
+    }
+
+    .home-title-wrap{
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      margin-bottom: 1.1rem;
+      animation: homeFloat 3s ease-in-out infinite;
+    }
+    .home-title-img{
+      width: min(340px, 84vw);
+      height: auto;
+      filter: drop-shadow(0 10px 18px rgba(0,0,0,.45));
+      user-select:none;
+      pointer-events:none;
+    }
+
+    .home-btn{
+      position: relative;
+      width: 100%;
+      padding: 1rem 1.25rem;
+      border-radius: 1.25rem;
+      font-weight: 800;
+      font-size: 1.125rem;
+      color: white;
+      box-shadow: 0 16px 28px rgba(0,0,0,.28);
+      transition: transform .15s ease, box-shadow .15s ease, filter .15s ease;
+      overflow:hidden;
+      border: 2px solid rgba(255,255,255,.22);
+      backdrop-filter: blur(6px);
+    }
+    .home-btn:active{
+      transform: scale(.97);
+      filter: brightness(.98);
+      box-shadow: 0 10px 18px rgba(0,0,0,.22);
+    }
+    .home-btn:hover{
+      transform: scale(1.02);
+      box-shadow: 0 20px 34px rgba(0,0,0,.32);
+    }
+    .home-btn::after{
+      content:"";
+      position:absolute;
+      top:-40%;
+      left:-40%;
+      width: 40%;
+      height: 180%;
+      background: linear-gradient(90deg, transparent, rgba(255,255,255,.55), transparent);
+      opacity: 0;
+    }
+    .home-btn:hover::after{
+      opacity: 1;
+      animation: sheen 1.25s ease forwards;
+    }
+    .home-btn-inner{
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      gap:.75rem;
+      position:relative;
+      z-index:1;
+    }
+    .home-icon{
+      width: 42px;
+      height: 42px;
+      border-radius: 14px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      background: rgba(255,255,255,.18);
+      border: 1px solid rgba(255,255,255,.22);
+      box-shadow: inset 0 1px 0 rgba(255,255,255,.25);
+    }
+    .home-icon span{ font-size: 20px; line-height: 1; }
+    .home-sub{
+      color: rgba(236, 253, 245, .92);
+      text-shadow: 0 6px 14px rgba(0,0,0,.35);
+    }
+    .home-pill{
+      border: 2px solid rgba(255,255,255,.18);
+      box-shadow: 0 14px 26px rgba(0,0,0,.22);
+    }
   </style>
 
   <style>body { box-sizing: border-box; }</style>
@@ -202,92 +297,59 @@
   <div id="app" class="h-full w-full relative flex flex-col">
 
     <!-- HOME SCREEN -->
-<!-- HOME SCREEN -->
-<div id="home-screen" class="screen active bg-home flex flex-col items-center justify-center p-6 text-center min-h-screen">
+    <div id="home-screen" class="screen active bg-home flex flex-col items-center justify-center p-6 text-center min-h-screen">
 
-  <style>
-    /* FLOAT ANIMATION */
-    @keyframes floatTitle {
-      0% { transform: translateY(0px); }
-      50% { transform: translateY(-8px); }
-      100% { transform: translateY(0px); }
-    }
+      <!-- TITLE IMAGE ONLY -->
+      <div class="home-title-wrap">
+        <img src="background-ui/title.png" alt="EcoRush" class="home-title-img" />
+      </div>
 
-    .title-float {
-      animation: floatTitle 3s ease-in-out infinite;
-    }
-  </style>
+      <p class="home-sub text-lg mb-10">Clean. Sort. Save the Planet.</p>
 
-  <!-- TITLE SECTION -->
-  <div class="mb-10">
-    
-    <h1 id="game-title"
-        class="title-float text-6xl sm:text-7xl md:text-8xl font-extrabold text-white leading-tight"
-        style="text-shadow:
-        -4px -4px 0 #065f46,
-         4px -4px 0 #065f46,
-        -4px  4px 0 #065f46,
-         4px  4px 0 #065f46,
-         0px  8px 20px rgba(0,0,0,0.5);">
-      EcoRush
-    </h1>
+      <!-- BUTTONS -->
+      <div class="space-y-4 w-full max-w-xs mb-10">
 
-    <p class="text-emerald-100 text-lg mt-2 drop-shadow-lg">
-      Clean. Sort. Save the Planet.
-    </p>
+        <button onclick="showScreen('map-screen')"
+          class="home-btn"
+          style="background: linear-gradient(135deg, #22c55e 0%, #10b981 45%, #059669 100%);">
+          <div class="home-btn-inner">
+            <div class="home-icon"><span>🎮</span></div>
+            <span>Play</span>
+          </div>
+        </button>
 
-  </div>
+        <button onclick="showScreen('shop-screen')"
+          class="home-btn"
+          style="background: linear-gradient(135deg, #f59e0b 0%, #fb923c 55%, #f97316 100%);">
+          <div class="home-btn-inner">
+            <div class="home-icon"><span>🛒</span></div>
+            <span>Shop</span>
+          </div>
+        </button>
 
-  <!-- BUTTONS -->
-  <div class="space-y-5 w-full max-w-xs mb-10">
+        <button onclick="showScreen('tutorial-screen')"
+          class="home-btn"
+          style="background: linear-gradient(135deg, rgba(255,255,255,.20) 0%, rgba(255,255,255,.08) 100%);">
+          <div class="home-btn-inner">
+            <div class="home-icon"><span>📖</span></div>
+            <span>How to Play</span>
+          </div>
+        </button>
 
-    <button onclick="showScreen('map-screen')" 
-      class="w-full py-4 px-6 bg-gradient-to-r from-green-500 to-emerald-600 
-      text-white text-xl font-bold rounded-2xl shadow-xl 
-      hover:scale-105 active:scale-95 transition-all duration-200">
-      🎮 Play
-    </button>
+      </div>
 
-    <button onclick="showScreen('shop-screen')" 
-      class="w-full py-4 px-6 bg-gradient-to-r from-amber-500 to-orange-500 
-      text-white text-xl font-bold rounded-2xl shadow-xl 
-      hover:scale-105 active:scale-95 transition-all duration-200">
-      🛒 Shop
-    </button>
-
-    <button onclick="showScreen('tutorial-screen')" 
-      class="w-full py-3 px-6 bg-white/20 backdrop-blur-md
-      text-white text-lg font-semibold rounded-2xl 
-      hover:bg-white/30 transition-all duration-200">
-      📖 How to Play
-    </button>
-
-  </div>
-
-  <!-- COINS & LIVES -->
-  <div class="flex gap-6 text-center">
-
-    <!-- COINS -->
-    <div class="flex items-center gap-3 bg-gradient-to-r 
-      from-amber-500 to-orange-500 px-6 py-3 rounded-full shadow-xl">
-
-      <span class="text-3xl">🪙</span>
-      <span id="home-coins" class="text-2xl font-bold text-white">162</span>
-
+      <!-- COINS & LIVES -->
+      <div class="flex gap-6 text-center">
+        <div class="home-pill flex items-center gap-3 bg-gradient-to-r from-amber-500 to-orange-500 px-6 py-3 rounded-full shadow-lg">
+          <span class="text-3xl">🪙</span>
+          <span id="home-coins" class="text-2xl font-bold text-white">0</span>
+        </div>
+        <div class="home-pill flex items-center gap-3 bg-gradient-to-r from-red-500 to-pink-500 px-6 py-3 rounded-full shadow-lg">
+          <span class="text-2xl" id="home-lives-icon">❤️</span>
+          <span id="home-lives" class="text-2xl font-bold text-white">5</span>
+        </div>
+      </div>
     </div>
-
-    <!-- LIVES -->
-    <div class="flex items-center gap-3 bg-gradient-to-r 
-      from-red-500 to-pink-500 px-6 py-3 rounded-full shadow-xl">
-
-      <span class="text-2xl">❤️</span>
-      <span id="home-lives" class="text-2xl font-bold text-white">5</span>
-
-    </div>
-
-  </div>
-
-</div>
 
     <!-- TUTORIAL SCREEN -->
     <div id="tutorial-screen" class="screen bg-tutorial flex-col p-4">
@@ -799,9 +861,17 @@
       updateAllCoinDisplays();
     }
 
+    // ✅ HARD FIX: guarantee ONLY the target screen is visible (prevents home showing behind)
     function showScreen(screenId) {
-      document.querySelectorAll('.screen').forEach(s => s.classList.remove('active'));
-      document.getElementById(screenId).classList.add('active');
+      const screens = document.querySelectorAll('.screen');
+      screens.forEach(s => {
+        s.classList.remove('active');
+        s.style.display = 'none'; // hard hide
+      });
+
+      const target = document.getElementById(screenId);
+      target.classList.add('active');
+      target.style.display = 'flex'; // hard show
 
       if (screenId === 'map-screen') renderLevelMap();
       else if (screenId === 'shop-screen') renderShop();
@@ -1471,8 +1541,7 @@
       window.elementSdk.init({
         defaultConfig,
         onConfigChange: async (config) => {
-          const titleEl = document.getElementById('game-title');
-          if (titleEl) titleEl.textContent = config.game_title || defaultConfig.game_title;
+          // ✅ Title is now an image: background-ui/title.png (no text to update)
         },
         mapToCapabilities: (config) => ({
           recolorables: [],
